--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@ body {
     height: 100vh;
     background-color: #D1D1D1;
     padding: 100px;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 main {
@@ -188,7 +189,7 @@ section {
 .button-Apply button {
     padding-top: 12px;
     padding-bottom: 12px;
-    margin-top: 45px;
+    margin-top: 35px;
     border: none;
     outline: none;
     background-color: #FF60A3;
